[gd_scene load_steps=10 format=3 uid="uid://cy75l761b5s55"]

[ext_resource type="PackedScene" uid="uid://c4l6nr5e4jwwq" path="res://models/indoors/structure/wallDoorway.glb" id="1_b6oa0"]
[ext_resource type="Script" path="res://scenes/indoors/door.gd" id="1_wdhtj"]
[ext_resource type="PackedScene" uid="uid://b1xmsmfgsvbjc" path="res://models/indoors/structure/doorway.glb" id="2_ayla8"]

[sub_resource type="Animation" id="Animation_7lxhe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wallDoorway/doorway/doorway(Clone)/door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hvdj5"]
resource_name = "open_in"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wallDoorway/doorway/doorway(Clone)/door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 4.3, 5.3, 6),
"transitions": PackedFloat32Array(1, 0.25, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(3.48787e-16, 0.785398, 3.48787e-16), Vector3(3.48787e-16, 0.785398, 3.48787e-16), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nune6"]
resource_name = "open_out"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wallDoorway/doorway/doorway(Clone)/door:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.5, 3.3, 4),
"transitions": PackedFloat32Array(1, 0.25, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(3.48787e-16, 0.785398, 3.48787e-16), Vector3(3.48787e-16, 0.785398, 3.48787e-16), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_awbof"]
_data = {
"RESET": SubResource("Animation_7lxhe"),
"open_in": SubResource("Animation_hvdj5"),
"open_out": SubResource("Animation_nune6")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_rwxf1"]
size = Vector3(1, 1, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_y2wux"]
size = Vector3(0.5, 1, 0.063)

[node name="door" type="Node3D"]
script = ExtResource("1_wdhtj")

[node name="wallDoorway" parent="." instance=ExtResource("1_b6oa0")]

[node name="doorway" parent="wallDoorway" instance=ExtResource("2_ayla8")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.75, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_awbof")
}

[node name="NavigationLink3D" type="NavigationLink3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
start_position = Vector3(2.08165e-12, 2.08165e-12, 0.25)
end_position = Vector3(2.08165e-12, 2.08165e-12, -0.25)

[node name="StaticBody3D" type="StaticBody3D" parent="." groups=["navigation_mesh_source_group"]]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -0.025)
shape = SubResource("BoxShape3D_rwxf1")

[node name="OutArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="OutArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5625)
shape = SubResource("BoxShape3D_y2wux")

[node name="InArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 0.5)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="InArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -0.625)
shape = SubResource("BoxShape3D_y2wux")

[connection signal="body_entered" from="OutArea" to="." method="_on_out_area_body_entered"]
[connection signal="body_entered" from="InArea" to="." method="_on_in_area_body_entered"]
